--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title> Redirecting... </title>
+  <title> Thingy </title>
   <meta name="viewport" content="width=device-width">
 </head>
 
