--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <div>
     <a href="https://github.com/JaPNaA/Thingy/tree/master">GitHub repository</a>
     <br>
-    <a href="https://github.com/JaPNaA/Thingy_2016/tree/master">2016 repository</a>
+    <a href="https://japnaa.github.io/Thingy_2016/">2016 repository</a>
     <br>
-    <a href="https://github.com/JaPNaA/Thingy_2017/tree/master">2017 repository</a>
+    <a href="https://japnaa.github.io/Thingy_2017/">2017 repository</a>
     <br>
-    <a href="https://github.com/JaPNaA/Thingy_2018/tree/master">2018 repository</a>
+    <a href="https://japnaa.github.io/Thingy_2018/">2018 repository</a>
     <br>
   </div>
 </body>
