make gooder structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title> Thingy </title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <title> Thingy </title>
 </head>
 
 <body>
@@ -17,3 +19,5 @@
     <br>
   </div>
 </body>
+
+</html>
