--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <title> Thingy </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Index of Thingy </title>
+
+    <style>
+        a {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
-  <div>
-    <a href="https://github.com/JaPNaA/Thingy/tree/master">GitHub repository</a>
-    <br>
-    <a href="https://japnaa.github.io/Thingy_2016/">2016 repository</a>
-    <br>
-    <a href="https://japnaa.github.io/Thingy_2017/">2017 repository</a>
-    <br>
-    <a href="https://japnaa.github.io/Thingy_2018/">2018 repository</a>
-    <br>
-  </div>
+    <div>
+        <a href="https://github.com/JaPNaA/Thingy"> GitHub repository </a><a href="https://japnaa.github.io/Thingy_2016/"> Thingy 2016 </a><a href="https://japnaa.github.io/Thingy_2017/"> Thingy 2017 </a><a href="https://japnaa.github.io/Thingy_2018/"> Thingy 2018 </a><a href="https://japnaa.github.io/Thingy_2019/"> Thingy 2019 </a>
+    </div>
 </body>
 
 </html>
