Add Thingy_2021 to index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div>
-        <a href="/Thingy_2016/"> Thingy 2016 </a><a href="/Thingy_2017/"> Thingy 2017 </a><a href="/Thingy_2018/"> Thingy 2018 </a><a href="/Thingy_2019/"> Thingy 2019 </a><a href="/Thingy_2020/"> Thingy 2020 </a><a href="https://github.com/JaPNaA/Thingy"> Index GitHub Repository </a>
+        <a href="/Thingy_2016/"> Thingy 2016 </a><a href="/Thingy_2017/"> Thingy 2017 </a><a href="/Thingy_2018/"> Thingy 2018 </a><a href="/Thingy_2019/"> Thingy 2019 </a><a href="/Thingy_2020/"> Thingy 2020 </a><a href="/Thingy_2021/"> Thingy 2021 </a><a href="https://github.com/JaPNaA/Thingy"> Index GitHub Repository </a>
     </div>
 </body>
 
